Exclude p4p/ophyd-async[pva] from py312

--- a/envs/env-py312.yml
+++ b/envs/env-py312.yml
@@ -193,7 +193,7 @@ dependencies:
     - bloptools >=0.7.0
     - digautoprofiler
     - mimesis
-    - ophyd-async[ca,pva]
+    - ophyd-async[ca]
     - pyhyperscattering[all]
     - redis-json-dict
   #***************************************************************************#
