--- a/envs/env-py312.yml
+++ b/envs/env-py312.yml
@@ -45,6 +45,7 @@ dependencies:
   - databroker >=2.0.0b45
   - dictdiffer
   - diffpy.pdffit2
+  - diffpy.pdfgui
   - diffpy.structure
   - discorpy
   - distributed
