--- a/envs/env-py312.yml
+++ b/envs/env-py312.yml
@@ -45,7 +45,7 @@ dependencies:
   - databroker >=2.0.0b45
   - dictdiffer
   - diffpy.pdffit2
-  - diffpy.pdfgui
+  # - diffpy.pdfgui  # no package for py312
   - diffpy.structure
   - discorpy
   - distributed
