--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -45,7 +45,7 @@ dependencies:
   - databroker >=2.0.0b45
   - dictdiffer
   - diffpy.pdffit2
-  # - diffpy.pdfgui. # fails to build the env with py311
+  - diffpy.pdfgui
   - diffpy.structure
   - discorpy
   - distributed
