--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -203,36 +203,37 @@ dependencies:
   #            Dependencies from the `nsls2-collection` metapackage           #
   #                                                                           #
   #***************************************************************************#
-  - bloptools >=0.7.0
-  - bluesky-darkframes >=0.6.0
-  - caproto
-  - emojis
-  - happi
-  - pexpect
-  # - pydm
-  - pyolog >=4.5.0
-  - pyserial
-  - python-confluent-kafka
-  - pyzenodo3
-  - simple-pid
-  - slack-sdk
-  # Beamline-specific packages
-  - hklpy  # [linux]
-  - hxnfly >=0.0.11
-  - kkcalc
-  - ppmac
-  - pychx >=4.3.1
-  - xpdacq ==1.0.0
-  # Debugging tools:
-  - hunter
-  - logging_tree
-  # Profiling tools:
-  - line_profiler
-  - pyinstrument
-  - pyperformance
-  # ML:
-  - botorch
-  - gpytorch
-  - ortools-python
-  - pytorch
-  - scikit-optimize
+  # Those package will be added to the successfully-resolved conda env:
+  # - bloptools >=0.7.0
+  # - bluesky-darkframes >=0.6.0
+  # - caproto
+  # - emojis
+  # - happi
+  # - pexpect
+  # # - pydm
+  # - pyolog >=4.5.0
+  # - pyserial
+  # - python-confluent-kafka
+  # - pyzenodo3
+  # - simple-pid
+  # - slack-sdk
+  # # Beamline-specific packages
+  # - hklpy  # [linux]
+  # - hxnfly >=0.0.11
+  # - kkcalc
+  # - ppmac
+  # - pychx >=4.3.1
+  # - xpdacq ==1.0.0
+  # # Debugging tools:
+  # - hunter
+  # - logging_tree
+  # # Profiling tools:
+  # - line_profiler
+  # - pyinstrument
+  # - pyperformance
+  # # ML:
+  # - botorch
+  # - gpytorch
+  # - ortools-python
+  # - pytorch
+  # - scikit-optimize
