--- a/envs/env-py312.yml
+++ b/envs/env-py312.yml
@@ -1,4 +1,4 @@
-name: 2024-2.3-py312-tiled
+name: 2024-3.0-py312-tiled
 channels:
   - conda-forge
 dependencies:
@@ -121,7 +121,7 @@ dependencies:
   - pillow
   - pocl  # needed by pyopencl, used by the `xrt` package
   - pre-commit
-  - prefect >=2.7
+  - prefect >=2.18
   - py-xgboost
   - py4xs
   - pycentroids
@@ -197,7 +197,8 @@ dependencies:
     - bloptools >=0.7.0
     - digautoprofiler
     - mimesis
-    # - ophyd-async[ca]
+    - ophyd-async[ca,pva]
+    - ortools
     - pyhyperscattering[all]
     - redis-json-dict
   #***************************************************************************#
