--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -193,11 +193,11 @@ dependencies:
   - pip
   - pip:
     - bluesky >=1.13.0a3
-    - digautoprofiler
-    - mimesis
+    # - digautoprofiler
+    # - mimesis
     - ophyd-async[ca,pva]
-    - ortools
-    - pyhyperscattering[all]
+    # - ortools
+    # - pyhyperscattering[all]
     - redis-json-dict
   #***************************************************************************#
   #                                                                           #
