--- a/envs/env-py312.yml
+++ b/envs/env-py312.yml
@@ -195,11 +195,11 @@ dependencies:
     - ansiwrap
     - bluesky >=1.13.0a3
     - bloptools >=0.7.0
-    - digautoprofiler
-    - mimesis
+    # - digautoprofiler
+    # - mimesis
     - ophyd-async[ca,pva]
-    - ortools
-    - pyhyperscattering[all]
+    # - ortools
+    # - pyhyperscattering[all]
     - redis-json-dict
   #***************************************************************************#
   #                                                                           #
