--- a/envs/env-py312.yml
+++ b/envs/env-py312.yml
@@ -45,7 +45,7 @@ dependencies:
   - databroker >=2.0.0b45
   - dictdiffer
   - diffpy.pdffit2
-  # - diffpy.pdfgui  # no package for py312
+  - diffpy.pdfgui
   - diffpy.structure
   - discorpy
   - distributed
@@ -128,7 +128,7 @@ dependencies:
   - pycryptodome
   - pyepics >=3.4.2
   - pyfai >=2024.5.0
-  # - pyfftw  # no build for py312 as of 2024-06-20
+  - pyfftw
   - pymatgen >=2024.5.1
   - maggma >=0.66
   - mp-api >=0.41.2
