--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -47,6 +47,7 @@ dependencies:
   - diffpy.pdffit2
   - diffpy.pdfgui
   - diffpy.structure
+  - dioptas
   - discorpy
   - distributed
   - doi2bib
@@ -61,9 +62,10 @@ dependencies:
   - globus-sdk
   - graphviz
   - grid-strategy
+  - h5json
   - h5py !=3.4
   - hdf5-external-filter-plugins
-  - hextools >=0.1.3
+  - hextools >=0.2.1
   - historydict
   - hvplot
   - hxntools >=0.6.1
@@ -81,6 +83,7 @@ dependencies:
   - isstools
   - jedi
   - julia
+  - juliaup
   - jupyter
   - jupyterlab
   - ldap3
@@ -147,7 +150,7 @@ dependencies:
   - pyzbar
   - qt >=5.15.0
   - redis-dict
-  # - redis-json-dict
+  - redis-json-dict >=0.2.1
   - redis-py
   - reportlab
   - requests
@@ -190,6 +193,7 @@ dependencies:
   - xrt
   - zict
   - pipx
+  - pixi
   - pip
   - pip:
     - ansiwrap
@@ -200,7 +204,7 @@ dependencies:
     - ophyd-async[ca,pva]
     - ortools
     - pyhyperscattering[bluesky,ui]
-    - redis-json-dict
+    - refuse
   #***************************************************************************#
   #                                                                           #
   #            Dependencies from the `nsls2-collection` metapackage           #
