--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -55,6 +55,12 @@ jobs:
           export CONDA_PACK_ENV_NAME=${env_name}
           echo "CONDA_PACK_ENV_NAME=${CONDA_PACK_ENV_NAME}" >> $GITHUB_ENV
 
+          export ARTIFACTS_DIR="$HOME/artifacts"
+          echo "ARTIFACTS_DIR=${ARTIFACTS_DIR}" >> $GITHUB_ENV
+          if [ ! -d "${ARTIFACTS_DIR}" ]; then
+              mkdir -v -p "${ARTIFACTS_DIR}"
+          fi
+
           env | sort -u
 
       # - uses: conda-incubator/setup-miniconda@v3
@@ -84,62 +90,10 @@ jobs:
           conda config --show
           printenv | sort
 
-      # - name: Add packages for py311
-      #   if: matrix.python-version == '3.11'
-      #   run: |
-      #     conda install -c conda-forge \
-      #       "bloptools>=0.7.0" \
-      #       "bluesky-darkframes>=0.6.0" \
-      #       caproto \
-      #       emojis \
-      #       happi \
-      #       pexpect \
-      #       "pyolog>=4.5.0" \
-      #       pyserial \
-      #       python-confluent-kafka \
-      #       pyzenodo3 \
-      #       simple-pid \
-      #       slack-sdk \
-      #       hklpy \
-      #       "hxnfly>=0.0.11" \
-      #       kkcalc \
-      #       ppmac \
-      #       "pychx>=4.3.1" \
-      #       "xpdacq==1.0.0" \
-      #       hunter \
-      #       logging_tree \
-      #       line_profiler \
-      #       pyinstrument \
-      #       pyperformance \
-      #       botorch \
-      #       gpytorch \
-      #       ortools-python \
-      #       pytorch \
-      #       scikit-optimize
-
-      - name: Export files
+      - name: Export of the env .yml file
         run: |
-          export ARTIFACTS_DIR="$HOME/artifacts"
-          echo "ARTIFACTS_DIR=${ARTIFACTS_DIR}" >> $GITHUB_ENV
-          if [ ! -d "${ARTIFACTS_DIR}" ]; then
-              mkdir -v -p "${ARTIFACTS_DIR}"
-          fi
-
-          # conda env export -n ${CONDA_PACK_ENV_NAME} -f ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.yml -c conda-forge --override-channels
           conda env export -f ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.yml
-          # Per https://conda.github.io/conda-pack/cli.html:
-          conda-pack -o ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.tar.gz --ignore-missing-files --ignore-editable-packages
-          openssl sha256 ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.tar.gz > ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}-sha256sum.txt
-          openssl md5 ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.tar.gz > ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}-md5sum.txt
-          chmod -v 664 ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}[.-]*
-
-      - name: Contents of the env .yml file
-        run: |
           cat ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.yml
-
-      - name: Checksum files
-        run: |
-          cat ${ARTIFACTS_DIR}/*sum.txt
 
       # https://github.com/actions/upload-artifact
       - name: Upload artifacts for the env .yml file
@@ -148,6 +102,18 @@ jobs:
           name: ${{ env.CONDA_PACK_ENV_NAME }}.yml
           path: ${{ env.ARTIFACTS_DIR }}/${{ env.CONDA_PACK_ENV_NAME }}.yml
           retention-days: 60
+
+      - name: Export files
+        run: |
+          # Per https://conda.github.io/conda-pack/cli.html:
+          conda-pack -o ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.tar.gz --ignore-missing-files --ignore-editable-packages
+          openssl sha256 ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.tar.gz > ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}-sha256sum.txt
+          openssl md5 ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}.tar.gz > ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}-md5sum.txt
+          chmod -v 664 ${ARTIFACTS_DIR}/${CONDA_PACK_ENV_NAME}[.-]*
+
+      - name: Checksum files
+        run: |
+          cat ${ARTIFACTS_DIR}/*sum.txt
 
       - name: Upload artifacts for branch
         if: |
