--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -52,7 +52,7 @@ dependencies:
   - distributed
   - doi2bib
   - dpcmaps
-  - edrixs >=0.1.1
+  # - edrixs >=0.1.1
   - eiger-io
   - event-model >=1.21
   - fabio
