--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -52,7 +52,7 @@ dependencies:
   - distributed
   - doi2bib
   - dpcmaps
-  # - edrixs >=0.1.1
+  - edrixs >=0.1.1
   - eiger-io
   - event-model >=1.21
   - fabio
@@ -82,8 +82,8 @@ dependencies:
   - ispyb
   - isstools
   - jedi
-  - julia
-  - juliaup
+  # - julia
+  # - juliaup
   - jupyter
   - jupyterlab
   - ldap3
